Removed all personal details

--- a/contact.html
+++ b/contact.html
@@ -11,16 +11,16 @@
     <table>
       <tr>
         <td>Phone #:</td>
-        <td>(403) 401-0599</td>
+        <td>(587) 917-3988</td>
       </tr>
       <tr>
         <td>Email:</td>
-        <td>carldbenigno@gmail.com</td>
+        <td>test123@gmail.com</td>
       </tr>
     </table>
     <hr />
     <form
-      action="mailto:carldbenigno@gmail.com"
+      action="mailto:test123@gmail.com"
       method="post"
       enctype="text/plain"
     >
